--- a/index.html
+++ b/index.html
@@ -11,29 +11,24 @@
 
   <svg></svg>
   <script>
-  TD=500, TS=1.15, NUM_STEPS=14, STAGE_MARGIN = 1.3;
+  TD=200, TS=1.15, NUM_STEPS=14, STAGE_MARGIN = 1.3;
   STARTING_RATIO = 4;
   s=null
   function computeTransform(seq) {
     r=d3.select("svg").node().getBoundingClientRect()
-    outerWidth=r.width, outerHeight = r.height;
-    var xs=seq.map(function(x){return x[0]}),ys=seq.map(function(x){return x[1]})
-    var minx = d3.min(xs), maxx = d3.max(xs), miny = d3.min(ys), maxy = d3.max(ys)
-    var innerWidth = (maxx - minx)
-    var innerHeight = (maxy - miny)
-    var margin_realpix = 50
-    var ratio = Math.min(outerWidth/(innerWidth+2*margin_realpix), outerHeight/(innerHeight+2*margin_realpix), STARTING_RATIO);
-    var margin_fakepix = margin_realpix / ratio
-    var xt = (outerWidth - innerWidth * ratio)/(2*ratio)
-    var yt = (outerHeight - innerHeight * ratio)/(2*ratio)
-    xform = "scale("+[ratio,ratio]+") translate(" + [-minx+xt,-miny+yt] + ")"
+    var xr = d3.extent(seq, (x) => x[0]), yr = d3.extent(seq, (x) => x[1])
+    var wo=r.width, ho = r.height, wi = xr[1]-xr[0], hi = yr[1]-yr[0];
+    var mgo = 50
+    var r = Math.min(wo/(wi+2*mgo), ho/(hi+2*mgo), STARTING_RATIO);
+    var xt = (wo - wi * r)/(2*r), yt = (ho - hi * r)/(2*r);
+    xform = "scale("+[r,r]+") translate(" + [-xr[0]+xt,-yr[0]+yt] + ")"
     return xform
   }
 
-  function tr(g) {return g.transition().duration(TD);}
-  function effectZoom(seq) { tr(s).attr("transform", computeTransform(seq)) }
-  function rotate(v, a){return [a[0] - v[1] + a[1], a[1] + v[0] - a[0]];}
-  function last(x) {return x[x.length-1]}
+  tr = (g) => g.transition().duration(TD);
+  effectZoom = (se) => tr(s).attr("transform", computeTransform(se))
+  rotate = (v,a) => [a[0] - v[1] + a[1], a[1] + v[0] - a[0]];
+  last = (x) => x[x.length-1];
 
   function setup(xy, start) {
     step = 0
@@ -52,7 +47,7 @@
 
 
   function extend() {
-    function r(x) { return rotate(x, last(last(totals))) }
+    r = (x) => rotate(x, last(last(totals)))
     segments.push(last(totals).map(r).reverse())
     totals.push(last(totals).concat(last(segments).slice(1)))
   }
@@ -72,9 +67,9 @@
   }
 
   function unfold2() {
-    pathd = d3.svg.line()(segments[step])
+    var pd = d3.svg.line()(segments[step])
     clone.remove()
-    s.append("path").attr("d", pathd).style("stroke", cs(step)).classed(step, true)
+    s.append("path").attr("d", pd).style("stroke", cs(step)).classed(step, true)
     if (step < NUM_STEPS) {
       unfold1()
     } else {
@@ -85,8 +80,7 @@
 
   function doRotate(rotatePt,g) {
     a = "rotate(0 " + rotatePt + ")", b = "rotate(90 " + rotatePt + ")"
-    w = function() {return d3.interpolateString(a,b)}
-    tr(g).attrTween("transform", w)
+    tr(g).attrTween("transform", () => d3.interpolateString(a,b))
   }
 
   function refold1() {
@@ -98,10 +92,7 @@
   }
 
   function unextend() {
-    function r(x) {return rotate(x, last(totals[step]))}
-    totals = totals.map(function(s) {
-      return s.map(r)
-    })
+    totals = totals.map((s) => s.map((x) => rotate(x, last(totals[step]))))
     return totals[step]
   }
 
