--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
   <svg></svg>
   <script>
-  TD=200, TS=1.15, NUM_STEPS=14, STAGE_MARGIN = 1.3;
+  TD=500, TS=1.15, NUM_STEPS=14, STAGE_MARGIN = 1.3;
   STARTING_RATIO = 4;
   s=null
+  waitthen = (t) => new Promise(function(r) {setTimeout(r, t)})
   function computeTransform(seq) {
     r=d3.select("svg").node().getBoundingClientRect()
     var xr = d3.extent(seq, (x) => x[0]), yr = d3.extent(seq, (x) => x[1])
@@ -31,12 +32,9 @@
   last = (x) => x[x.length-1];
 
   function setup(xy, start) {
-    step = 0
+    step = 0, segs = [[[0,0], xy]], totals = segs.slice()
     if (s) s.remove()
-    s = d3.select("svg").append("g")
-    segments = [[[0,0], xy]]
-    totals = segments.slice()
-    s.attr("transform", computeTransform(segments[0]))
+    s = d3.select("svg").append("g").attr("transform", computeTransform(segs[0]))
     p = s.append("path").style("stroke", cs(0)).attr("d", "M0,0 L0,0")
     function cont() {
       (start ? tr(p) : p).attr("d", d3.svg.line()(totals[0]))
@@ -48,8 +46,8 @@
 
   function extend() {
     r = (x) => rotate(x, last(last(totals)))
-    segments.push(last(totals).map(r).reverse())
-    totals.push(last(totals).concat(last(segments).slice(1)))
+    segs.push(last(totals).map(r).reverse())
+    totals.push(last(totals).concat(last(segs).slice(1)))
   }
 
   h=d3.hsl,cs_ = d3.scale.cubehelix().domain([-0.2, 0.5, 1]).range([h(-100, 0.75, 0.35),h(80,1.50,0.80),h(260, 0.75, 0.35)])
@@ -63,19 +61,17 @@
     tr(g.selectAll("path")).style("stroke", cs(step))
     doRotate(last(totals[step-1]), g)
     effectZoom(totals[step])
-    setTimeout(unfold2, TD*STAGE_MARGIN);
-  }
-
-  function unfold2() {
-    var pd = d3.svg.line()(segments[step])
-    clone.remove()
-    s.append("path").attr("d", pd).style("stroke", cs(step)).classed(step, true)
-    if (step < NUM_STEPS) {
-      unfold1()
-    } else {
-      c=s
-      setTimeout(refold1, TD)
-    }
+    setTimeout(() => {
+      var pd = d3.svg.line()(segs[step])
+      clone.remove()
+      s.append("path").attr("d", pd).style("stroke", cs(step)).classed(step, true)
+      if (step < NUM_STEPS) {
+        unfold1()
+      } else {
+        c=s
+        setTimeout(refold1, TD*(STAGE_MARGIN-1)*2)
+      }
+    }, TD*STAGE_MARGIN);
   }
 
   function doRotate(rotatePt,g) {
@@ -85,10 +81,22 @@
 
   function refold1() {
     step--, TD /= TS, children = c.node().children, c = c.append("g")
-    doRotate(last(segments[step]), c)
+    doRotate(last(segs[step]), c)
     while (children.length > 2) {c.node().appendChild(children[0])}
     effectZoom(unextend())
-    setTimeout(refold2, TD)
+    setTimeout(() => {
+      children[0].remove()
+      if (step > 0) {
+        refold1();
+      } else {
+        newxy = rotate(segs[0][1], [0,0])
+        if (!(NUM_STEPS % 2)) {
+          doRotate([segs[0][1][0]/2, segs[0][1][1]/2], c=c.append("g"))
+          c.node().appendChild(d3.select("path").node())
+        }
+        setTimeout(function f() {setup(newxy)}, TD)
+      }
+    }, TD)
   }
 
   function unextend() {
@@ -96,21 +104,6 @@
     return totals[step]
   }
 
-  function refold2() {
-    children[0].remove()
-    if (step > 0) {
-      refold1();
-    } else {
-      newxy = rotate(segments[0][1], [0,0])
-      if (!(NUM_STEPS % 2)) {
-        c=c.append("g")
-        rotatePt = [segments[0][1][0]/2, segments[0][1][1]/2]
-        doRotate([segments[0][1][0]/2, segments[0][1][1]/2], c)
-        c.node().appendChild(d3.select("path").node())
-      }
-      setTimeout(function f() {setup(newxy)}, TD)
-    }
-  }
   setup([0,10], true)
   </script>
 </body>
