in a really good state, gonna shrink it more

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 </style>
 <svg></svg>
 <script>
-TD=500, TS=1.15, NUM_STEPS=14, STAGE_MARGIN = 1.3;
+TD=200, TS=1.15, NUM_STEPS=14, STAGE_MARGIN = 1.3;
 STARTING_RATIO = 4;
 s=null
-waitthen = (t) => new Promise(function(r) {setTimeout(r, t)})
 function computeTransform(seq) {
   r=d3.select("svg").node().getBoundingClientRect()
   var xr = d3.extent(seq, (x) => x[0]), yr = d3.extent(seq, (x) => x[1])
@@ -31,7 +30,7 @@ function setup(xy, start) {
   step = 0, segs = [[[0,0], xy]], totals = segs.slice()
   if (s) s.remove()
   s = d3.select("svg").append("g").attr("transform", computeTransform(segs[0]))
-  p = s.append("path").style("stroke", cs(0)).attr("d", "M0,0 L0,0")
+  p = s.append("path").classed("first", true).style("stroke", cs(0)).attr("d", "M0,0 L0,0")
   function cont() {
     (start ? tr(p) : p).attr("d", d3.svg.line()(totals[0]))
     setTimeout(unfold1, TD*STAGE_MARGIN);
@@ -52,14 +51,14 @@ function unfold1() {
   step++; TD *= TS
   extend()
   clone = s.node().cloneNode(true)
-  g=d3.select(s.node().appendChild(clone))
+  g=d3.select(s.node().insertBefore(clone, s.node().children[0]))
   tr(g.selectAll("path")).style("stroke", cs(step))
   doRotate(last(totals[step-1]), g)
   effectZoom(totals[step])
   setTimeout(() => {
     var pd = d3.svg.line()(segs[step])
     clone.remove()
-    s.append("path").attr("d", pd).style("stroke", cs(step)).classed(step, true)
+    d3.select(s.node().insertBefore(document.createElementNS(d3.ns.prefix['svg'], 'path'), s.node().children[0])).attr("d", pd).style("stroke", cs(step)).classed(step, true)
     if (step < NUM_STEPS) {
       unfold1()
     } else {
@@ -76,13 +75,14 @@ function doRotate(rotatePt,g) {
 
 function refold1() {
   step--, TD /= TS, children = c.node().children, c = c.append("g")
+  TD = 3000
   doRotate(last(segs[step]), c)
-  while (children.length > 2) {c.node().appendChild(children[0])}
+  while (children.length > 2) {c.node().appendChild(children[1])}
   effectZoom(unextend())
   setTimeout(() => {
     children[0].remove()
     if (step > 0) {
-      refold1();
+      refold1()
     } else {
       newxy = rotate(segs[0][1], [0,0])
       if (!(NUM_STEPS % 2)) {
